Added Map Editing
Ported a custom version of rjokens's DOTRMap tool to allow both ISO map editing and Memory map editing.
Currently saving maps is unimplemented but will be next patch/update

--- a/DOTRModder/Form1.resx
+++ b/DOTRModder/Form1.resx
@@ -154,4 +154,190 @@
   <metadata name="number.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="scEditMapMain.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="scEditMapMain.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="pbSelectedTile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAAd0SU1FB+EHBhYqDhb/36YAABA1SURBVHhe7dwhrl1XFgZhDyOwoWFgw4aGDQMD
+        AxsaZgiGhhmCoYfgWbnPAAqs0pa2tXQKfOSBoyftVT+8H378+PHzxLdv35K1vn//foS+edOXL1+ONAB5
+        NYraoG/eRFEbDUBejaI26Js3UdRGA5BXo6gN+uZNFLXRAOTVKGqDvnkTRW00AHk1itqgb95EURsNQF6N
+        ojbomzdR1EYDkFejqA365k0UtdEA5NUoaoO+eRNFbTQAeTWK2qBv3kRRGw1AXo2iNuibN1HURgOQV6Oo
+        DfrmTRS10QDk1Shqg755E0VtNAB5NYraoG/eRFEbDUBejaI26Js3UdRGA5BXo6gN+uZNFLXxgf5ofP70
+        7yN//Of3/EJ//vnXkU+f/ptf6I8/zjQAL0dRG3SUuYeiNhqAl6OoDTrK3ENRGw3Ay1HUBh1l7qGojQbg
+        5Shqg44y91DURgPwchS1QUeZeyhqowF4OYraoKPMPRS10QC8HEVt0FHmHoraaABejqI26ChzD0VtNAAv
+        R1EbdJS5h6I2GoCXo6gNOsrcQ1EbDcDLUdQGHWXuoaiNBuDlKGqDjjL3UNRGA/ByFLVBR5l7KGqjAXg5
+        itqgo8w9FLXRALwcRW3QUeYeito4HoAvz0dO0ChkjqI2Pn/+fIRGIXMUtUFRGw3AchS1QVEbdNSZo6gN
+        itpoAJajqA2K2qCjzhxFbVDURgOwHEVtUNQGHXXmKGqDojYagOUoaoOiNuioM0dRGxS10QAsR1EbFLVB
+        R505itqgqI0GYDmK2qCoDTrqzFHUBkVtNADLUdQGRW3QUWeOojYoaqMBWI6iNihqg446cxS1QVEbDcBy
+        FLVBURt01JmjqA2K2mgAlqOoDYraoKPOHEVtUNRGA7AcRW1Q1AYddeYoaoOiNhqA5Shqg6I26KgzR1Eb
+        FLXRACxHURsUtUFHnTmK2qCojQZgOYraoKgNOurMUdQGRW00AMtR1AZFbdBRZ46iNihqowFYjqI2KGqD
+        jtr49L+/j9A3N6GoDYraaACWo6gNitqgozYoaoO+uQlFbVDURgOwHEVtUNQGHbVBURv0zU0oaoOiNhqA
+        5Shqg6I26KgNitqgb25CURsUtdEALEdRGxS1QUdtUNQGfXMTitqgqI0GYDmK2qCoDTpqg6I26JubUNQG
+        RW00AMtR1AZFbdBRGxS1Qd/chKI2KGqjAViOojYoaoOO2qCoDfrmJhS1QVEbDcByFLVBURt01AZFbdA3
+        N6GoDYraaACWo6gNitqgozYoaoO+uQlFbVDURgOwHEVtUNQGHbVBURv0zU0oaoOiNhqA5Shqg6I26KgN
+        itqgb25CURsUtdEALEdRGxS1QUdtUNQGfXMTitqgqI0GYDmK2qCoDTpqg6I26JubUNQGRW00AMtR1AZF
+        bdBRGxS1Qd/chKI2KGqjAViOojYoaoOO2qCoDfrmJhS1QVEbDcByFLVBURt01JvQqBj0TYOiNihqowFY
+        jqI2KGqDjnoTitqgbxoUtUFRGw3AchS1QVEbdNSbUNQGfdOgqA2K2mgAlqOoDYraoKPehKI26JsGRW1Q
+        1EYDsBxFbVDUBh31JhS1Qd80KGqDojYagOUoaoOiNuioN6GoDfqmQVEbFLXRACxHURsUtUFHvQlFbdA3
+        DYraoKiNBmA5itqgqA066k0oaoO+aVDUBkVtNADLUdQGRW3QUW9CURv0TYOiNihqowFYjqI2KGqDjnoT
+        itqgbxoUtUFRGw3AchS1QVEbdNSbUNQGfdOgqA2K2mgAlqOoDYraoKPehKI26JsGRW1Q1EYDsBxFbVDU
+        Bh31JhS1Qd80KGqDojYagOUoaoOiNuioN6GoDfqmQVEbFLXRACxHURsUtUFHvQlFbdA3DYraoKiNBmA5
+        itqgqA066k0oaoO+aVDUBkVtNADLUdQGRW3QUWeOojYoaqMBWI6iNihqg446cxS1QVEbDcByFLVBURt0
+        1JmjqA2K2mgAlqOoDYraoKPOHEVtUNRGA7AcRW1Q1AYddeYoaoOiNhqA5Shqg6I26KgzR1EbFLXRACxH
+        URsUtUFHnTmK2qCojQZgOYraoKgNOurMUdQGRW00AMtR1AZFbdBRZ46iNihqowFYjqI2KGqDjjpzFLVB
+        URsNwHIUtUFRG3TUmaOoDYraaACWo6gNitqgo84cRW1Q1EYDsBxFbVDUBh115ihqg6I2GoDlKGqDojbo
+        qDNHURsUtdEALEdRGxS1QUedOYraoKiNBmA5itqgqA066sxR1AZFbTQAy1HUBkVt0FFnjqI2KGqjAViO
+        ojYoaoOOOnMUtUFRGw3AchS1QVEbdNSZo6gNitpoAJajqA2K2qCjzhxFbVDURgOwHEVtUNQGHXXmKGqD
+        ojYagOUoaoOiNuioM0dRGxS10QAsR1EbFLVBR505itqgqI0GYDmK2qCoDTrqzFHUBkVtNADLUdQGRW3Q
+        UWeOojYoaqMBWI6iNihqg446cxS1QVEbDcByFLVBURt01JmjqA2K2mgAlqOoDYraoKPOHEVtUNRGA7Ac
+        RW1Q1AYddeYoaoOiNhqA5Shqg6I26KgzR1EbFLXRACxHURsUtUFHnTmK2qCojQZgOYraoKgNOurMUdQG
+        RW18+Ofr158nKOrcQ6OgQNQR/vr7CI2CQVEbDcByGLVBR505iNqgqA2K2mgAlsOoDTrqzEHUBkVtUNRG
+        A7AcRm3QUWcOojYoaoOiNhqA5TBqg446cxC1QVEbFLXRACyHURt01JmDqA2K2qCojQZgOYzaoKPOHERt
+        UNQGRW00AMth1AYddeYgaoOiNihqowFYDqM26KgzB1EbFLVBURsNwHIYtUFHnTmI2qCoDYraaACWw6gN
+        OurMQdQGRW1Q1EYDsBxGbdBRZw6iNihqg6I2GoDlMGqDjjpzELVBURsUtdEALIdRG3TUmYOoDYraoKiN
+        BmA5jNqgo84cRG1Q1AZFbTQAy2HUBh115iBqg6I2KGrj+AdB6J8y6EcOcg+OgkA/MpKLIGqjAXg5itrA
+        o8w9ELXRALwcRW3gUeYeiNpoAF6OojbwKHMPRG00AC9HURt4lLkHojYagJejqA08ytwDURsNwMtR1AYe
+        Ze6BqI0G4OUoagOPMvdA1EYD8HIUtYFHmXsgaqMBeDmK2sCjzD0QtdEAvBxFbeBR5h6I2mgAXo6iNvAo
+        cw9EbTQAL0dRG3iUuQeiNhqAl6OoDTzK3ANRGw3Ay1HUBh5l7oGojQbg5ShqA48y90DUxvEA4I8kCDQK
+        maOoDfqREYNGIXMYtfG8wYkGYDmK2qCoDTrqzGHUxvMGJxqA5Shqg6I26Kgzh1EbzxucaACWo6gNitqg
+        o84cRm08b3CiAViOojYoaoOOOnMYtfG8wYkGYDmK2qCoDTrqzGHUxvMGJxqA5Shqg6I26Kgzh1Ebzxuc
+        aACWo6gNitqgo84cRm08b3CiAViOojYoaoOOOnMYtfG8wYkGYDmK2qCoDTrqzGHUxvMGJxqA5Shqg6I2
+        6Kgzh1EbzxucaACWo6gNitqgo84cRm08b3CiAViOojYoaoOOOnMYtfG8wYkGYDmK2qCoDTrqzGHUxvMG
+        JxqA5Shqg6I26Kgzh1EbzxucaACWo6gNitqgo84cRm08b3Diwz9fv/48QVEbdNSZo6gNitqgo84cRi3Q
+        mxoNwHL0qAZFbdBRZ46iNuhNjQZgOXpUg6I26KgzR1Eb9KZGA7AcPapBURt01JmjqA16U6MBWI4e1aCo
+        DTrqzFHUBr2p0QAsR49qUNQGHXXmKGqD3tRoAJajRzUoaoOOOnMUtUFvajQAy9GjGhS1QUedOYraoDc1
+        GoDl6FENitqgo84cRW3QmxoNwHL0qAZFbdBRZ46iNuhNjQZgOXpUg6I26KgzR1Eb9KZGA7AcPapBURt0
+        1JmjqA16U6MBWI4e1aCoDTrqzFHUBr2p0QAsR49qUNQGHXXmKGqD3tRoAJajRzUoaoOOOnMUtUFvajQA
+        y9GjGhS1QUedOYraoDc1+kGQ5ehRDYraoKPOHEWtPG9wogFYjqI2KGqDjjpzGLXxvMGJBmA5itqgqA06
+        6sxh1MbzBicagOUoaoOiNuioM4dRG88bnGgAlqOoDYraoKPOHEZtPG9wogFYjqI2KGqDjjpzGLXxvMGJ
+        BmA5itqgqA066sxh1MbzBicagOUoaoOiNuioM4dRG88bnGgAlqOoDYraoKPOHEZtPG9wogFYjqI2KGqD
+        jjpzGLXxvMGJBmA5itqgqA066sxh1MbzBicagOUoaoOiNuioM4dRG88bnGgAlqOoDYraoKPOHEZtPG9w
+        ogFYjqI2KGqDjjpzGLXxvMGJBmA5itqgqA066sxh1MbzBicagOUoaoOiNuioM4dRG88bnOgHQZajqA2K
+        2qCjzhxGbTxvcKIBWI6iNihqg446cxi18bzBiQZgOYraoKgNOurMYdTG8wYnGoDlKGqDojboqDOHURvP
+        G5xoAJajqA2K2qCjzhxGbTxvcKIBWI6iNihqg446cxi18bzBiQZgOYraoKgNOurMYdTG8wYnGoDlKGqD
+        ojboqDOHURvPG5xoAJajqA2K2qCjzhxGbTxvcKIBWI6iNihqg446cxi18bzBiQZgOYraoKgNOurMYdTG
+        8wYnGoDlKGqDojboqDOHURvPG5xoAJajqA2K2qCjzhxGbTxvcKIBWI6iNihqg446cxi18bzBiQZgOYra
+        oKgNOurMYdTG8wYnGoDlKGqDojboqDOHURvPG5zoB0GWo6gNitqgo84cRi3QmxoNwHL0qAZFbdBRZ46i
+        NuhNjQZgOXpUg6I26KgzR1Eb9KZGA7AcPapBURt01JmjqA16U6MBWI4e1aCoDTrqzFHUBr2p0QAsR49q
+        UNQGHXXmKGqD3tRoAJajRzUoaoOOOnMUtUFvajQAy9GjGhS1QUedOYraoDc1GoDl6FENitqgo84cRW3Q
+        mxoNwHL0qAZFbdBRZ46iNuhNjQZgOXpUg6I26KgzR1Eb9KZGA7AcPapBURt01JmjqA16U6MBWI4e1aCo
+        DTrqzFHUBr2p0QAsR49qUNQGHXXmKGqD3tRoAJajRzUoaoOOOnMUtUFvajQAy9GjGhS1QUedOYraoDc1
+        fvkA5AyNgkFR5x4aBYN+5MNoAJajqA06ytxDURsUtdEALEdRG3SUuYeiNihqowFYjqI26ChzD0VtUNRG
+        A7AcRW3QUeYeitqgqI0GYDmK2qCjzD0UtUFRGw3AchS1QUeZeyhqg6I2GoDlKGqDjjL3UNQGRW00AMtR
+        1AYdZe6hqA2K2mgAlqOoDTrK3ENRGxS10QAsR1EbdJS5h6I2KGqjAViOojboKHMPRW1Q1EYDsBxFbdBR
+        5h6K2qCojQZgOYraoKPMPRS1QVEbDcByFLVBR5l7KGqDojYagOUoaoOOMvdQ1AZFbXygPxq/f/yY5Bf5
+        18ffjjQAyWIUtdEAJItR1EYDkCxGURsNQLIYRW00AMliFLXRACSLUdRGA5AsRlEbDUCyGEVtNADJYhS1
+        0QAki1HURgOQLEZRGw1AshhFbTQAyWIUtdEAJItR1EYDkCxGUc/99vP/8c9H0sbtnqYAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="pbForest.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAAd0SU1FB+EHBhYhNDMH398AABYsSURBVHhe7dwhsmXXDUBRw4aGDRsaGhp6CIaG
+        hhmCYWBgYGCgZ+lMYIHsOlXqUj2BRRq80tl9Jfh/+POvP/5+8cdf/zznfCe//vvNHYBzFtNSF3cAzllM
+        S13cAThnMS11cQfgnMW01MUdgHMW01IXdwDOWUxLXdwBOGcxLXVxB+CcxbTUxR2AcxbTUhd3AM5ZTEtd
+        3AE4ZzEtdXEH4JzFtNTFHYBzFtNSF3cAzllMS13cAThnMS118YP+sfjy7cuTH//1+5t//PxEM23CJsXv
+        vzzRTJuwSYFvqtBMxc+//fTkDgBm2oRNCix1oZk2YZMC31ShmQotdXEHADNtwiYFlrrQTJuwSYFvqtBM
+        hZa6uAOAmTZhkwJLXWimTdikwDdVaKZCS13cAcBMm7BJgaUuNNMmbFLgmyo0U6GlLu4AYKZN2KTAUhea
+        aRM2KfBNFZqp0FIXdwAw0yZsUmCpC820CZsU+KYKzVRoqYs7AJhpEzYpsNSFZtqETQp8U4VmKrTUxR0A
+        zLQJmxRY6kIzbcImBb6pQjMVWuriDgBm2oRNCix1oZk2YZMC31ShmQotdXEHADNtwiYFlrrQTJuwSYFv
+        qtBMhZa6uAOAmTZhkwJLXWimTdikwDdVaKZCS13cAcBMm7BJgaUuNNMmbFLgmyo0U6GlLu4AYKZN2KTA
+        UheaaRM2KfBNFZqp0FIXdwAw0yZsUmCpC820CZsU+KYKzVRoqYs7AJhpEzYpsNSFZtqETQp8U4VmKrTU
+        xXc/AF//8/WJohaaaRM1KdSk0EybqEmhJoVmKrTUxR0AzLSJmhRqUmimTdSkUJNCMxVa6uIOAGbaRE0K
+        NSk00yZqUqhJoZkKLXVxBwAzbaImhZoUmmkTNSnUpNBMhZa6uAOAmTZRk0JNCs20iZoUalJopkJLXdwB
+        wEybqEmhJoVm2kRNCjUpNFOhpS7uAGCmTdSkUJNCM22iJoWaFJqp0FIXdwAw0yZqUqhJoZk2UZNCTQrN
+        VGipizsAmGkTNSnUpNBMm6hJoSaFZiq01MUdAMy0iZoUalJopk3UpFCTQjMVWuriDgBm2kRNCjUpNNMm
+        alKoSaGZCi11cQcAM22iJoWaFJppEzUp1KTQTIWWurgDgJk2UZNCTQrNtImaFGpSaKZCS13cAcBMm6hJ
+        oSaFZtpETQo1KTRToaUu7gBgpk3UpFCTQjNtoiaFmhSaqdBSF3cAMNMmalKoSaGZNlGTQk0KzVRoqYvv
+        fgD4RxYKRC000yZsUqBJoZk2YZMCTQrNVGipizsAmGkTNinQpNBMm7BJgSaFZiq01MUdAMy0CZsUaFJo
+        pk3YpECTQjMVWuriDgBm2oRNCjQpNNMmbFKgSaGZCi11cQcAM23CJgWaFJppEzYp0KTQTIWWurgDgJk2
+        YZMCTQrNtAmbFGhSaKZCS13cAcBMm7BJgSaFZtqETQo0KTRToaUu7gBgpk3YpECTQjNtwiYFmhSaqdBS
+        F3cAMNMmbFKgSaGZNmGTAk0KzVRoqYs7AJhpEzYp0KTQTJuwSYEmhWYqtNTFHQDMtAmbFGhSaKZN2KRA
+        k0IzFVrq4g4AZtqETQo0KTTTJmxSoEmhmQotdXEHADNtwiYFmhSaaRM2KdCk0EyFlrq4A4CZNmGTAk0K
+        zbQJmxRoUmimQktd3AHATJuwSYEmhWbahE0KNCk0U6GlLu4AYKZN2KRAk0IzbcImBZoUmqnQUhff/QDo
+        jywUilpopk3UpFCTQjNtoiaFmhSaqdBSF3cAMNMmalKoSaGZNlGTQk0KzVRoqYs7AJhpEzUp1KTQTJuo
+        SaEmhWYqtNTFHQDMtImaFGpSaKZN1KRQk0IzFVrq4g4AZtpETQo1KTTTJmpSqEmhmQotdXEHADNtoiaF
+        mhSaaRM1KdSk0EyFlrq4A4CZNlGTQk0KzbSJmhRqUmimQktd3AHATJuoSaEmhWbaRE0KNSk0U6GlLu4A
+        YKZN1KRQk0IzbaImhZoUmqnQUhd3ADDTJmpSqEmhmTZRk0JNCs1UaKmLOwCYaRM1KdSk0EybqEmhJoVm
+        KrTUxR0AzLSJmhRqUmimTdSkUJNCMxVa6uIOAGbaRE0KNSk00yZqUqhJoZkKLXVxBwAzbaImhZoUmmkT
+        NSnUpNBMhZa6uAOAmTZRk0JNCs20iZoUalJopkJLXdwBwEybqEmhJoVm2kRNCjUpNFOhpS6eDwD/SEKB
+        KMWXX799X/hPKdikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR80yAtdXEH4BU+
+        yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhd3AF7hoyzYpECTgm+a
+        hCYFmxRoUvBNg7TUxR2AV/goCzYp0KTgmyahScEmBZoUfNMgLXVxB+AVPsqCTQo0KfimSWhSsEmBJgXf
+        NEhLXdwBeIWPsmCTAk0KvmkSmhRsUqBJwTcN0lIXdwBe4aMs2KRAk4JvmoQmBZsUaFLwTYO01MUdgFf4
+        KAs2KdCk4JsmoUnBJgWaFHzTIC11cQfgFT7Kgk0KNCn4pkloUrBJgSYF3zRIS13cAXiFj7JgkwJNCr5p
+        EpoUbFKgScE3DdJSF3cAXuGjLNikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR8
+        0yAtdXEH4BU+yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhfPB0B/
+        JKFQ1EJRRuGjLNSkUJOCb5qEJoWaFGpS8E2DtNTFHYBX+CgLNSnUpOCbJqFJoSaFmhR80yAtdXEH4BU+
+        ykJNCjUp+KZJaFKoSaEmBd80SEtd3AF4hY+yUJNCTQq+aRKaFGpSqEnBNw3SUhd3AF7hoyzUpFCTgm+a
+        hCaFmhRqUvBNg7TUxR2AV/goCzUp1KTgmyahSaEmhZoUfNMgLXVxB+AVPspCTQo1KfimSWhSqEmhJgXf
+        NEhLXdwBeIWPslCTQk0KvmkSmhRqUqhJwTcN0lIXdwBe4aMs1KRQk4JvmoQmhZoUalLwTYO01MUdgFf4
+        KAs1KdSk4JsmoUmhJoWaFHzTIC11cQfgFT7KQk0KNSn4pkloUqhJoSYF3zRIS13cAXiFj7JQk0JNCr5p
+        EpoUalKoScE3DdJSF3cAXuGjLNSkUJOCb5qEJoWaFGpS8E2DtNTFHYBX+CgLNSnUpOCbJqFJoSaFmhR8
+        0yAtdXEH4BU+ykJNCjUp+KZJaFKoSaEmBd80SEtd3AF4hY+yUJNCTQq+aRKaFGpSqEnBNw3SUhfPB4B/
+        ZKFA1EJRRuGjLNikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR80yAtdXEH4BU+
+        yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhd3AF7hoyzYpECTgm+a
+        hCYFmxRoUvBNg7TUxR2AV/goCzYp0KTgmyahScEmBZoUfNMgLXVxB+AVPsqCTQo0KfimSWhSsEmBJgXf
+        NEhLXdwBeIWPsmCTAk0KvmkSmhRsUqBJwTcN0lIXdwBe4aMs2KRAk4JvmoQmBZsUaFLwTYO01MUdgFf4
+        KAs2KdCk4JsmoUnBJgWaFHzTIC11cQfgFT7Kgk0KNCn4pkloUrBJgSYF3zRIS13cAXiFj7JgkwJNCr5p
+        EpoUbFKgScE3DdJSF3cAXuGjLNikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR8
+        0yAtdXEH4BU+yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhfPB0B/
+        ZKFQ1EJRRuGjLNSkUJOCb5qEJoWaFGpS8E2DtNTFHYBX+CgLNSnUpOCbJqFJoSaFmhR80yAtdXEH4BU+
+        ykJNCjUp+KZJaFKoSaEmBd80SEtd3AF4hY+yUJNCTQq+aRKaFGpSqEnBNw3SUhd3AF7hoyzUpFCTgm+a
+        hCaFmhRqUvBNg7TUxR2AV/goCzUp1KTgmyahSaEmhZoUfNMgLXVxB+AVPspCTQo1KfimSWhSqEmhJgXf
+        NEhLXdwBeIWPslCTQk0KvmkSmhRqUqhJwTcN0lIXdwBe4aMs1KRQk4JvmoQmhZoUalLwTYO01MUdgFf4
+        KAs1KdSk4JsmoUmhJoWaFHzTIC11cQfgFT7KQk0KNSn4pkloUqhJoSYF3zRIS13cAXiFj7JQk0JNCr5p
+        EpoUalKoScE3DdJSF3cAXuGjLNSkUJOCb5qEJoWaFGpS8E2DtNTFHYBX+CgLNSnUpOCbJqFJoSaFmhR8
+        0yAtdXEH4BU+ykJNCjUp+KZJaFKoSaEmBd80SEtd3AF4hY+yUJNCTQq+aRKaFGpSqEnBNw3SUhfPB4B/
+        ZKFA1EJRRuGjLNikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR80yAtdXEH4BU+
+        yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhd3AF7hoyzYpECTgm+a
+        hCYFmxRoUvBNg7TUxR2AV/goCzYp0KTgmyahScEmBZoUfNMgLXVxB+AVPsqCTQo0KfimSWhSsEmBJgXf
+        NEhLXdwBeIWPsmCTAk0KvmkSmhRsUqBJwTcN0lIXdwBe4aMs2KRAk4JvmoQmBZsUaFLwTYO01MUdgFf4
+        KAs2KdCk4JsmoUnBJgWaFHzTIC11cQfgFT7Kgk0KNCn4pkloUrBJgSYF3zRIS13cAXiFj7JgkwJNCr5p
+        EpoUbFKgScE3DdJSF3cAXuGjLNikQJOCb5qEJgWbFGhS8E2DtNTFHYBX+CgLNinQpOCbJqFJwSYFmhR8
+        0yAtdXEH4BU+yoJNCjQp+KZJaFKwSYEmBd80SEtd3AF4hY+yYJMCTQq+aRKaFGxSoEnBNw3SUhfvBwBR
+        Cj1qE/2RiUJNCs20iZoUalJopk201MUdgEf6KAs1KTTTJmpSqEmhmTbRUhd3AB7poyzUpNBMm6hJoSaF
+        ZtpES13cAXikj7JQk0IzbaImhZoUmmkTLXVxB+CRPspCTQrNtImaFGpSaKZNtNTFHYBH+igLNSk00yZq
+        UqhJoZk20VIXdwAe6aMs1KTQTJuoSaEmhWbaREtd3AF4pI+yUJNCM22iJoWaFJppEy11cQfgkT7KQk0K
+        zbSJmhRqUmimTbTUxR2AR/ooCzUpNNMmalKoSaGZNtFSF3cAHumjLNSk0EybqEmhJoVm2kRLXdwBeKSP
+        slCTQjNtoiaFmhSaaRMtdXEH4JE+ykJNCs20iZoUalJopk201MUdgEf6KAs1KTTTJmpSqEmhmTbRUhd3
+        AB7poyzUpNBMm6hJoSaFZtpES13cAXikj7JQk0IzbaImhZoUmmkTLXXxfAA01CfRR1XoNz+JmhT6zU+i
+        pS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzS
+        R1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+J
+        mhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+i
+        pS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7uADzS
+        R1noNz+JmhT6zU+ipS7uADzSR1noNz+JmhT6zU+ipS7eD8C3L0/+++fvT3795acnmmkTNSnUpNBMm6hJ
+        8dvPPz7RTIWWurgDgJk2UZNCTQrNtImaFFrqQjMVWuriDgBm2kRNCjUpNNMmalJoqQvNVGipizsAmGkT
+        NSnUpNBMm6hJoaUuNFOhpS7uAGCmTdSkUJNCM22iJoWWutBMhZa6uAOAmTZRk0JNCs20iZoUWupCMxVa
+        6uIOAGbaRE0KNSk00yZqUmipC81UaKmLOwCYaRM1KdSk0EybqEmhpS40U6GlLu4AYKZN1KRQk0IzbaIm
+        hZa60EyFlrq4A4CZNlGTQk0KzbSJmhRa6kIzFVrq4g4AZtpETQo1KTTTJmpSaKkLzVRoqYs7AJhpEzUp
+        1KTQTJuoSaGlLjRToaUu7gBgpk3UpFCTQjNtoiaFlrrQTIWWurgDgJk2UZNCTQrNtImaFFrqQjMVWuri
+        DgBm2kRNCjUpNNMmalJoqQvNVGipizsAmGkTNSnUpNBMm6hJoaUuNFOhpS7WHwBFLTTTJmpSqEmhmTZR
+        k0JHsdBMhZa6uAOAmTZRk0JNCs20iZoUWupCMxVa6uIOAGbaRE0KNSk00yZqUmipC81UaKmLOwCYaRM1
+        KdSk0EybqEmhpS40U6GlLu4AYKZN1KRQk0IzbaImhZa60EyFlrq4A4CZNlGTQk0KzbSJmhRa6kIzFVrq
+        4g4AZtpETQo1KTTTJmpSaKkLzVRoqYs7AJhpEzUp1KTQTJuoSaGlLjRToaUu7gBgpk3UpFCTQjNtoiaF
+        lrrQTIWWurgDgJk2UZNCTQrNtImaFFrqQjMVWuriDgBm2kRNCjUpNNMmalJoqQvNVGipizsAmGkTNSnU
+        pNBMm6hJoaUuNFOhpS7uAGCmTdSkUJNCM22iJoWWutBMhZa6uAOAmTZRk0JNCs20iZoUWupCMxVa6uIO
+        AGbaRE0KNSk00yZqUmipC81UaKmLOwCYaRM1KdSk0EybqEmhpS40U6GlLtYfAEUtNNMmalKoSaGZNlGT
+        Qk0KzVRoqYs7AJhpEzUp1KTQTJuoSaEmhWYqtNTFHQDMtImaFGpSaKZN1KRQk0IzFVrq4g4AZtpETQo1
+        KTTTJmpSqEmhmQotdXEHADNtoiaFmhSaaRM1KdSk0EyFlrq4A4CZNlGTQk0KzbSJmhRqUmimQktd3AHA
+        TJuoSaEmhWbaRE0KNSk0U6GlLu4AYKZN1KRQk0IzbaImhZoUmqnQUhd3ADDTJmpSqEmhmTZRk0JNCs1U
+        aKmLOwCYaRM1KdSk0EybqEmhJoVmKrTUxR0AzLSJmhRqUmimTdSkUJNCMxVa6uIOAGbaRE0KNSk00yZq
+        UqhJoZkKLXVxBwAzbaImhZoUmmkTNSnUpNBMhZa6uAOAmTZRk0JNCs20iZoUalJopkJLXdwBwEybqEmh
+        JoVm2kRNCjUpNFOhpS7uAGCmTdSkUJNCM22iJoWaFJqp0FIXP+gfi28/fT3f0Zdffnyi3zx7fP365g7A
+        clrqQr959tBSF3cAltNSF/rNs4eWurgDsJyWutBvnj201MUdgOW01IV+8+yhpS7uACynpS70m2cPLXVx
+        B2A5LXWh3zx7aKmLOwDLaakL/ebZQ0td3AFYTktd6DfPHlrq4g7AclrqQr959tBSF3cAltNSF/rNs4eW
+        urgDsJyWutBvnj201MUdgOW01IV+8+yhpS7uACynpS70m2cPLXVxB2A5LXWh3zx7aKmLOwDLaakL/ebZ
+        Q0v9//v69/8A47x4B0ADsz8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="RefreshEditor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>319, 17</value>
+  </metadata>
 </root>
