--- a/DOTRModder/Properties/Resources.resx
+++ b/DOTRModder/Properties/Resources.resx
@@ -118,6 +118,135 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="01OpeningCutscene" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\01OpeningCutscene.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="02MainMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\02MainMenu.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="03CustomDuel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\03CustomDuel.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="04MapMusic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\04MapMusic.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="05DeckCreation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\05DeckCreation.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="06Special" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\06Special.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="07TutorialDuel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\07TutorialDuel.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="08BattleMusicRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\08BattleMusicRed.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="09BattleMusicWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\09BattleMusicWhite.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="10Seto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\10Seto.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="11Yugi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\11Yugi.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="12MFLWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\12MFLWhite.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="13NormalBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\13NormalBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="14MeadowBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\14MeadowBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="15MountainBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\15MountainBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="16SeaBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16SeaBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="17ForestBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\17ForestBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="18WastelandBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\18WastelandBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="19CrushBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\19CrushBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="20DarkBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\20DarkBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="21ToonBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\21ToonBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="22LabBattle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\22LabBattle.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="23Victory" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\23Victory.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="24NewGame" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\24NewGame.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="25SimonSummoning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\25SimonSummoning.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="26SetosArrival" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\26SetosArrival.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="27TalkWithYugi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\27TalkWithYugi.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="28YugiArrivesAtDover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\28YugiArrivesAtDover.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="29PegasusBetrayal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\29PegasusBetrayal.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="30DefeatRichardCutscene" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\30DefeatRichardCutscene.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="31SetoSummoningRitual1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\31SetoSummoningRitual1.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="32SetoSummongRitual2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32SetoSummongRitual2.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="33SummonMFLS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\33SummonMFLS.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="34FindSetosBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\34FindSetosBook.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="35MakoTheme" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\35MakoTheme.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="36SummonMFLC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\36SummonMFLC.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="37SetoHandsYouBadge" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\37SetoHandsYouBadge.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="38EndGameYorkist" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\38EndGameYorkist.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="40CustomDuel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\40CustomDuel.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="41Trade" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\41Trade.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="42Defeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\42Defeat.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="43Exodia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\43Exodia.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="44MFLRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\44MFLRed.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="CRUSH" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CRUSH.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
